--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-# Compiled class file
-*.class
+/*.7z
+/*.rar
+/*.zip
+/*.tar.gz
+/*.exe
+backup/
 
-# Log file
-*.log
+# Readme word file
+*.docx
 
-# BlueJ files
-*.ctxt
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Folder config file
+Desktop.ini
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
